@@ -1,3 +1,19 @@
+# Mandelbrot Explorer
 A program that generates the Mandelbrot set and provides exploration features, like, paning around, zooming and also saving screenshots.
 
-Note: If see that the file names of some of the images have typo, that is because I mistakingly kept a typo for the names at the function that is responsible for the images. So, sorry for that. Fix it if you want to.
+### Run the .jar
+Execute: `java --enable-preview -jar .\Mandelbrot.jar` in terminal at the root directory of the project.
+
+### Controls
+- `w` - pan up.
+- `s` - pan down.
+- `d` - pad right.
+- `a` - pan left.
+- `=` - zoom in (low).
+- `-` - zoom out (low).
+- Left click - zoom in.
+- Right click - zoom out.
+- `esc` - close app.
+- Enter - save screenshot in the program folder.
+
+Well. It was fun making this!
